--- a/Signin.html
+++ b/Signin.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -48,7 +48,7 @@
         <nav class="py-3 bg-dark  navbar navbar-dark  navbar-expand-md" >
             <div class="container">
                 <div class="logo">
-                    <a class="navbar-brand text-warning" href=""> <img width="40" height="40" src="LOGO.png" alt=""> EVENT MANAGEMENT</a>
+                    <a class="navbar-brand text-warning" href=""> <img width="40" height="40" src="./LOGO.png" alt=""> EVENT MANAGEMENT</a>
                 </div>
                 <button data-bs-toggle="collapse" data-bs-target="#main-menu" type="button" class="navbar-toggler">
                     <span class="navbar-toggler-icon"></span>
