--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -48,7 +48,7 @@
         <nav class="py-3 bg-dark  navbar navbar-dark  navbar-expand-md" >
             <div class="container">
                 <div class="logo">
-                    <a class="navbar-brand text-warning" href=""> <img width="40" height="40" src="/images/LOGO.png" alt=""> EVENT MANAGEMENT</a>
+                    <a class="navbar-brand text-warning" href=""> <img width="40" height="40" src="./images/LOGO.png" alt=""> EVENT MANAGEMENT</a>
                 </div>
                 <button data-bs-toggle="collapse" data-bs-target="#main-menu" type="button" class="navbar-toggler">
                     <span class="navbar-toggler-icon"></span>
@@ -74,13 +74,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/images/slid--1.gif" class="d-block w-100 " alt="...">
+                <img src="./images/slid--1.gif" class="d-block w-100 " alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/slid--3.gif" class="d-block w-100 " alt="...">
+                <img src="./images/slid--3.gif" class="d-block w-100 " alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/slid--1.gif" class="d-block w-100 " alt="...">
+                <img src="./images/slid--1.gif" class="d-block w-100 " alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -109,7 +109,7 @@
                 <div class="row text-center py-3">
 
                     <div class="col-md-3 y">
-                        <img class="rounded-circle shadow-4-strong" alt="avatar2" src="/images/party.gif" />
+                        <img class="rounded-circle shadow-4-strong" alt="avatar2" src="./images/party.gif" />
 
                         <h4>PARTY HALL</h4>
                         <div class="text-muted">
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/saloon.jpg" />
+                            src="./images/saloon.jpg" />
 
                         <h4>SALOONS</h4>
                         <div class="text-muted">
@@ -128,7 +128,7 @@
 
                     </div>
                     <div class="col-md-3">
-                        <img class="rounded-circle shadow-4-strong" alt="avatar2" src="/images/CATERING-SERVICES.jpg" />
+                        <img class="rounded-circle shadow-4-strong" alt="avatar2" src="./images/CATERING-SERVICES.jpg" />
 
                         <h4>CATERING SERVICES</h4>
                         <div class="text-muted">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/DRESS-DESIGNER'S.jpg" />
+                            src="./images/DRESS-DESIGNER'S.jpg" />
 
                         <h4>DRESS DESIGNER'S</h4>
                         <div class="text-muted">
@@ -152,7 +152,7 @@
 
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/EVENT-ORGANIZERS.jpg" />
+                            src="./images/EVENT-ORGANIZERS.jpg" />
 
                         <h4>EVENT ORGANIZERS</h4>
                         <div class="text-muted">
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/STAGE DECORATION.jpg" />
+                            src="./images/STAGE DECORATION.jpg" />
 
                         <h4>STAGE DECORATION</h4>
                         <div class="text-muted">
@@ -172,8 +172,8 @@
                     </div>
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/LIGHTING-DECORATION.jpg">
-
+                        src="./images/LIGHTING-DECORATION.jpg">
+                        
                         <h4>LIGHTING DECORATION</h4>
                         <div class="text-muted">
                             <p>30 Events</p>
@@ -182,8 +182,8 @@
                     </div>
                     <div class="col-md-3">
                         <img class="rounded-circle shadow-4-strong" alt="avatar2"
-                            src="/images/RENT-A-CAR.gif">
-
+                        src="./images/RENT-A-CAR.gif">
+                        
                         <h4>RENT A CAR</h4>
                         <div class="text-muted">
                             <p>33 Events</p>
@@ -209,7 +209,7 @@
 
                 <div class="row text-center">
                     <div class="col-md-2">
-                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="/images/search.png" />
+                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="./images/search.png" />
 
                         <h4>Search Services</h4>
 
@@ -221,7 +221,7 @@
 
 
                     <div class="col-md-2 ">
-                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="/images/request-ques.png" />
+                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="./images/request-ques.png" />
 
                         <h4>Request Quote</h4>
                         <div class="text-muted">
@@ -231,7 +231,7 @@
 
                     </div>
                     <div class="col-md-2 ">
-                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="/images/booking.png" />
+                        <img class="rounded-circle1 shadow-4-strong" alt="avatar2" src="./images/booking.png" />
 
                         <h4>Boook a Services</h4>
                         <div class="text-muted">
